--- a/secrets.yaml
+++ b/secrets.yaml
@@ -1,5 +1,5 @@
-fallback_password: <set_captive_portal_pw>
-api_key: <set_HA_api_key>
-ssid: <set_wifi_ssid>
-password: <set_wifi_password>
+fallback_password: password
+api_key: cmVwbGFjZW1lLS1yZXBsYWNlbWUtLS1yZXBsYWNlbWU= #replaceme--replaceme---replaceme
+ssid: lagomcontrol
+password: password
 domain: .local
